# Shift_Mgr

./: .env.example  .gitignore  Gemma Agentic_CP_Translator.txt  README.md  USER_MANUAL.md  default_business_context.json  default_constraints.json  find_files.ps1  pyproject.toml  requirements.txt  shift pattaya 2569 (2).xlsx  streamlit_app.py
.streamlit/: config.toml
experiments/: bootstrap_explained.py  clear_roster_data.py  full_loop_mock_constraints.py  test_full_chain.py  test_generation.py  test_translator_case.py  test_translator_case_2.py  test_translator_production_ids.py
src/shift_manager/: app.py  database.py  engine.py  manager.py  models.py  translator.py
src/shift_manager/db/: __init__.py  company_repo.py  core.py  employee_repo.py  leave_repo.py  schedule_repo.py
src/shift_manager/ui/: __init__.py  active_roster.py  constraints.py  employee_detail.py  history.py  management.py  preparation.py  utils.py
tests/: test_machine_constraints.py  test_roster_lifecycle.py  test_translator.py  verify_manual.ps1
